<resources>
    <string name="app_name">Customers Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_edit">Customer</string>
    <string name="addedit_first_name">First Name</string>
    <string name="addedit_last_name">Last Name</string>
    <string name="addedit_profession">Profession</string>
    <string name="addedit_company_name">Company Name</string>
    <string name="addedit_phone_number">Phone Number</string>
    <string name="addedit_notes">Notes</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete_confirmation">Are you sure you want to delete this record ?</string>
    <string name="fill_required_fields_warning">Please fill all required fields</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Continue Editing</string>
    <string name="cancelEditDiag_negative_caption">Abandon Changes</string>
    <string name="menu_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_backup">Backup Database</string>
    <string name="action_restore">Restore Database</string>
    <string name="overwrite">Overwrite</string>
    <string name="backup_overwrite_confirm_text">Backup file already exists, do you want to overwrite it?</string>
    <string name="backup_grant_access_explanation">This app can\'t backup your database to external storage unless you grant access</string>
    <string name="restore_grant_access_explanation">This app can\'t restore your database from external storage unless you grant access</string>
    <string name="dialog_problem_title">Problem</string>
    <string name="external_storage_readonly">External Storage is Read-only</string>
    <string name="external_storage_missing">External Storage missing</string>
    <string name="backup_done">Backup Done</string>
    <string name="dialog_restore_overwrite_confirmation">Are you sure you want to overwrite entries with backup file ?</string>
    <string name="dialog_database_backup_not_found">Backup database file not found</string>
    <string name="dialog_database_version_mismatch">Backup database version mismatch current\'s database version</string>
    <string name="restore_complete">Restore Complete</string>
    <string name="grant_access">Grant Access</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_copyright">Copyright \u00a9 2017 Athanasios Raptodimos</string>
    <string name="about_website">Website https://wwww.kalodiodev.eu</string>
    <string name="about_email">For support, email thanosra@gmail.com</string>
    <string name="disclaimer_text">Author has no responsibilty for errors or damages that may occur from the use of this software.</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="save_completed_message">Save completed successfully.</string>
    <string name="record_deleted_message">Record deleted successfully</string>
    <string name="about_license_title">License</string>
    <string name="about_license">This application is released under Apache v2.0 license\nhttp://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits">Icons from https://icons8.com</string>
</resources>
