<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="eu.kalodiodev.customersnote.addeditcustomer.AddEditCustomerActivity">
    <item
        android:id="@+id/addedit_mnu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/addedit_mnu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="never"/>
</menu>
